Empty item, updating templates, fixing crashes